[SUBTASK-NONE] Tested app and fixed found issues